2011-03-01  anthony taranto  <anthony.taranto@gmail.com>

Return undefined value from ScriptController::evaluate(), allowing the
        caller to distinguish between an error and an undefined return value.
        https://bugs.webkit.org/show_bug.cgi?id=51528

        * bindings/v8/ScriptController.cpp:

Canonical link: https://commits.webkit.org/69878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79981 268f45cc-cd09-0410-ab3c-d52691b4dbfc